Checking in workaround for bug 108175, temporarily disable framestate storage on frame destruction. r=jkeiser@iname.com, sr=hyatt@netscape.com